--- a/dcpl.cabal
+++ b/dcpl.cabal
@@ -23,7 +23,7 @@ Library
   Exposed-modules:   DCPL.PostFix
 
   -- Packages needed in order to build this package.
-  Build-depends:     base >= 4.0
+  Build-depends:     base >= 4.0, mtl >= 1.1
 
   -- Modules not exported by this package.
   -- Other-modules:
