--- a/haskell/dcpl.cabal
+++ b/haskell/dcpl.cabal
@@ -12,7 +12,7 @@ Build-type:          Simple
 
 -- Extra files to be distributed with the package, such as examples or
 -- a README.
-Extra-source-files:  README.org
+Extra-source-files:
 
 -- Constraint on the version of Cabal needed to build this package.
 Cabal-version:       >=1.2
